# ICare

./: README.md  alembic.ini  icare.yaml  pyproject.toml  settings.py  settings.yaml.copy
app/: database.py  service.py
graph/: descriptions.py  mutation.py  query.py  scheme.py
migrations/: env.py
